syntax = 'proto3';

package models.file;

import "google/protobuf/timestamp.proto";

enum FileType {
  IMAGE = 0;
  DOCUMENT = 1;
  OTHER = 2;
}

message File {
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  optional google.protobuf.Timestamp updatedAt = 3;

  string user = 4;
  string name = 5;
  string originalName = 6;
  int32 size = 7;
  string mimeType = 8;
  bool isPublic = 9;
  FileType type = 10;
  string extension = 11;
}
